<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_current_region"
        android:icon="@drawable/menu_current_region_selector"
        android:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_current_region_redact"
                android:title="@string/menu_region_redact"
                android:icon="@drawable/ic_context_fill" />
            <item android:id="@+id/menu_current_region_pixelate"
                android:title="@string/menu_region_redact"
                android:icon="@drawable/ic_context_pixelate" />
            <item android:id="@+id/menu_current_region_crowd_pixelate"
                android:title="@string/menu_region_crowd_pixelate"
                android:icon="@drawable/ic_context_pixelate" />
            <item android:id="@+id/menu_current_region_identify"
                android:title="@string/menu_region_identify"
                android:icon="@drawable/ic_context_id" />
            <item android:id="@+id/menu_current_region_delete"
                android:title="@string/menu_region_delete"
                android:icon="@drawable/ic_context_delete" />
        </menu>
    </item>
    <item android:id="@+id/menu_current_image"
        android:icon="@drawable/ic_ssc"
        android:showAsAction="always">
        <menu>
             <item android:id="@+id/menu_preview"
        		android:title="@string/menu_preview" 
        		android:icon="@drawable/ic_menu_preview"/>
    		<item android:id="@+id/menu_save"
        		android:title="@string/menu_save"
        		android:icon="@drawable/ic_menu_save" />
    		<item android:id="@+id/menu_minimize"
    		    android:title="@string/menu_minimize" />
        </menu>
    </item>
</menu>
