<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverlayActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout style="@style/H1Holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    	<org.witness.mods.InformaHeaderTextView style="@style/H1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/informaConfirm_title" />
    </LinearLayout>
    <org.witness.mods.InformaTextView style="@style/P"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:text="@string/informaConfirm_text" />
   	<org.witness.mods.InformaButton style="@style/Button_standard"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="1dip"
        android:layout_marginBottom="1dip"
   	    android:text="@string/informaConfirm_btn_view"
   	    android:id="@+id/informaConfirm_btn_view" />
   	<org.witness.mods.InformaButton style="@style/Button_standard"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="1dip"
        android:layout_marginBottom="1dip"
   	    android:text="@string/informaConfirm_btn_share"
   	    android:id="@+id/informaConfirm_btn_share" />
   	<org.witness.mods.InformaButton style="@style/Button_standard"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="1dip"
        android:layout_marginBottom="1dip"
   	    android:text="@string/informaConfirm_btn_takeAnother"
   	    android:id="@+id/informaConfirm_btn_takeAnother" />
</LinearLayout>